--- a/src/assets/css/containers/BookDetail.scss
+++ b/src/assets/css/containers/BookDetail.scss
@@ -306,3 +306,32 @@
      }
    }
 }
+.resize-card-thumb-preview{
+  max-width: 525px;
+  height: 525px;
+  overflow: hidden;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @include media-breakpoint-down(sm){
+    height: 426px;
+  }
+  img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    width: unset!important;
+    -o-object-fit: contain;
+    object-fit: contain;
+    -o-object-position: center;
+    object-position: center;
+    border-radius: 5px;
+    transition: .5s;
+  }
+}
